feat: ex2 and ex3

--- a/Lab 1.ipynb
+++ b/Lab 1.ipynb
@@ -59,7 +59,7 @@
     "- $140x + 500y \\le 2000$ — ограничение по молоку (гр.)  \n",
     "- $5x = 40$ — ограничение по ванильному сахару (гр.)\n",
     "\n",
-    "Ограничения целостности?:\n",
+    "Ограничения целостности:\n",
     "- $x \\ge 0$\n",
     "- $y \\ge 0$\n",
     "- $x \\in \\mathbb{Z}$\n",
@@ -79,20 +79,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "119f6550",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x = 8\n",
-      "y = 6\n",
-      "Максимальная выручка = 5000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     ":dep good_lp = \"1.14.0\"\n",
     "\n",
@@ -119,12 +109,486 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "204ec191",
+   "metadata": {},
+   "source": [
+    "## Задание 2. Задача о назначениях"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d0cdef7",
+   "metadata": {},
+   "source": [
+    "### Постановка задачи (обобщённая)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4899f0f",
+   "metadata": {},
+   "source": [
+    "Шесть рабочих W1 – W6 должны выполнить пять работ J1, J2, J3, J4, J5. Уровень подготовки и\n",
+    "опыт работы у рабочих разный. Время выполнения работ для каждого работника приведено в\n",
+    "таблице:\n",
+    "\n",
+    "|       | J_1 | J_2 | J_3 | J_4 | J_5 |\n",
+    "|-------|-----|-----|-----|-----|-----|\n",
+    "|  W_1  | 3   | 4   | 7   | 4   | 8   |\n",
+    "|  W_2  | 4   | 8   | 8   | 3   | 3   |\n",
+    "|  W_3  | 7   | 5   | 7   | 2   | 7   |\n",
+    "|  W_4  | 5   | 7   | 9   | 5   | 9   |\n",
+    "|  W_5  | 4   | 6   | 5   | 3   | 8   |\n",
+    "|  W_6  | 7   | 5   | 5   | 4   | 7   |\n",
+    "\n",
+    "Каждая работа должна быть выполнена, она выполняется без прерывания одним рабочим. Порядок выполнения работ не важен. Требуется распределить работы так, чтобы минимизировать время занятости рабочих (время, когда все рабочие выполнят запланированные для них работы). Требуется построить математическую модель и найти оптимальное решение."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce70ce2a",
+   "metadata": {},
+   "source": [
+    "### Математиеская модель"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99b1d3ba",
+   "metadata": {},
+   "source": [
+    "- T - момент времени, когда все рабочие завершат выполнение своей работы\n",
+    "\n",
+    "$ x_{ij} = \n",
+    "\\begin{cases}\n",
+    "1 \\text{ если i-й рабочий выполняет j-ю работу,} \\quad i \\in [1, 6], \\quad j \\in [1, 5], \\\\\n",
+    "0 \\text{ если нет}\n",
+    "\\end{cases}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8394f426",
+   "metadata": {},
+   "source": [
+    "### Ограничения"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24635005",
+   "metadata": {},
+   "source": [
+    "Каждая работа должна быть выполнена одним из рабочих:\n",
+    "\n",
+    "$ \\sum_{i=1}^{4} x_{ij} = 1 \\quad \\forall \\quad j = 1,\\dots,5, $\n",
+    "\n",
+    "Время выполнения работы каждым из рабочих не больше \\( T \\):\n",
+    "\n",
+    "$ (A^i, x^i) \\leq T, \\quad \\text{при } i = 1,\\dots,6, $\n",
+    "\n",
+    "где в матрице $ A $ значение $ a_{ij} $ равно времени выполнения $ i $-й работы $ j $-м рабочим; $ A^i, x^i $ -- $ i $-е строки в матрицах $ A, x $.\n",
+    "\n",
+    "$\n",
+    "A = \n",
+    "\\begin{bmatrix}\n",
+    "3 & 4 & 7 & 4 & 8 \\\\\n",
+    "4 & 8 & 8 & 3 & 3 \\\\\n",
+    "7 & 5 & 7 & 2 & 7 \\\\\n",
+    "5 & 7 & 9 & 5 & 9 \\\\\n",
+    "4 & 6 & 5 & 3 & 8 \\\\\n",
+    "7 & 5 & 5 & 4 & 7 \n",
+    "\\end{bmatrix}\n",
+    "$\n",
+    "\n",
+    "Критерий качества: $ T \\to \\min $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f04a86c",
+   "metadata": {},
+   "source": [
+    "### Код"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2a72c2f",
+   "id": "817d810c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ":dep good_lp = \"1.14.0\"\n",
+    "\n",
+    "use good_lp::*;\n",
+    "\n",
+    "let a = vec![\n",
+    "    vec![3, 4, 7, 4, 8],\n",
+    "    vec![4, 8, 8, 3, 3],\n",
+    "    vec![7, 5, 7, 2, 7],\n",
+    "    vec![5, 7, 9, 5, 9],\n",
+    "    vec![4, 6, 5, 3, 8],\n",
+    "    vec![7, 5, 5, 4, 7],\n",
+    "];\n",
+    "\n",
+    "let num_workers = 6;\n",
+    "let num_jobs = 5;\n",
+    "\n",
+    "let mut vars = variables!();\n",
+    "\n",
+    "let mut x = vec![];\n",
+    "for i in 0..num_workers {\n",
+    "    let mut row = vec![];\n",
+    "    for j in 0..num_jobs {\n",
+    "        row.push(vars.add(variable().binary()));\n",
+    "    }\n",
+    "    x.push(row);\n",
+    "}\n",
+    "\n",
+    "let t = vars.add(variable().min(0.0));\n",
+    "\n",
+    "let mut problem = vars.minimise(t).using(default_solver);\n",
+    "\n",
+    "for job in 0..num_jobs {\n",
+    "    let mut job_constraint = Expression::from_other_affine(0.0);\n",
+    "    for worker in 0..num_workers {\n",
+    "        job_constraint = job_constraint + x[worker][job];\n",
+    "    }\n",
+    "    problem.add_constraint(job_constraint.eq(1.0));\n",
+    "}\n",
+    "\n",
+    "for worker in 0..num_workers {\n",
+    "    let mut time_constraint = Expression::from_other_affine(0.0);\n",
+    "    for job in 0..num_jobs {\n",
+    "        time_constraint = time_constraint + (a[worker][job] as f64) * x[worker][job];\n",
+    "    }\n",
+    "    problem.add_constraint(time_constraint.leq(t));\n",
+    "}\n",
+    "\n",
+    "let solution = problem.solve()?;\n",
+    "\n",
+    "println!(\"Оптимальное решение найдено!\");\n",
+    "println!(\"Минимальное время выполнения: T = {} часов\", solution.value(t));\n",
+    "println!();\n",
+    "\n",
+    "println!(\"Распределение работ по рабочим:\");\n",
+    "for i in 0..num_workers {\n",
+    "    let mut worker_time = 0.0;\n",
+    "    let mut jobs_assigned = Vec::new();\n",
+    "\n",
+    "    for j in 0..num_jobs {\n",
+    "        if solution.value(x[i][j]) > 0.5 {\n",
+    "            worker_time += a[i][j] as f64;\n",
+    "            jobs_assigned.push(j + 1);\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    if !jobs_assigned.is_empty() {\n",
+    "        println!(\"Рабочий W_{} выполняет работы: {:?}\", i + 1, jobs_assigned);\n",
+    "        println!(\"  Общее время: {} часов\", worker_time);\n",
+    "        println!(\"  Состав работ:\");\n",
+    "        for &job in &jobs_assigned {\n",
+    "            println!(\"    - Работа J_{} ({} часов)\", job, a[i][job - 1]);\n",
+    "        }\n",
+    "        println!();\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fcb0979",
+   "metadata": {},
+   "source": [
+    "## Задание 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3c83e9d",
+   "metadata": {},
+   "source": [
+    "### Постановка задачи"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd711394",
+   "metadata": {},
+   "source": [
+    "Представьте, что мы хотим провести DataFest с 5 разными секциями и у для каждой из них мы забронировали 5 залов различной вместимости: в каждом зале не должно быть меньше 180 и больше 250 людей, а на третьей секции активность подразумевает, что должно быть точно 220 человек.\n",
+    "\n",
+    "При этом организаторам удалось собрать 1000 заявок с указанием приоритета посещения 3 трех секций, где 1 - максимальный приоритет, 3 минимальный, а 10000 означает, что человек не пойдет на эту секцию.\n",
+    "\n",
+    "Наша задача дать рекомендацию слушателю, на какую же секцию ему все таки пойти, чтобы хватило места всем."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47383c37",
+   "metadata": {},
+   "source": [
+    "### Математическая модель"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8eb97b62",
+   "metadata": {},
+   "source": [
+    "- $ I = {1, 2, \\dots, 1000} $ - множество людей;\n",
+    "- $ J = {1, 2, 3, 4, 5} $ - множество секций;\n",
+    "- $ P_{ij} $ - приоритет человека i для секции (1, 2, 3 или 10000);\n",
+    "- $ L_j = 180 $ - минимальная вместимость секций;\n",
+    "- $ U_j = 250 $ - максимальная вместимость секций.\n",
+    "\n",
+    "\n",
+    "$ x_{ij} = \n",
+    "\\begin{cases}\n",
+    "1 \\text{ если i-й человек назначенен на секцию j,} \\\\\n",
+    "0 \\text{ если нет}\n",
+    "\\end{cases}\n",
+    "$\n",
+    "\n",
+    "Ограниччения:\n",
+    "\n",
+    "$ \\sum_{i=1}^{1000} x_{ij} = 1 \\quad \\forall \\quad j = 1,\\dots,5, $\n",
+    "\n",
+    "$ L_j \\le \\sum_{i=1}^{1000} x_{ij} \\le U_j $\n",
+    "\n",
+    "$ L_j \\le \\sum_{i=1}^{1000} x_{i 3} = 220 $\n",
+    "\n",
+    "$ x \\in {0, 1} $ для всех $ i \\in \\mathbb{I}, j \\in \\mathbb{J} $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eb6eae9",
+   "metadata": {},
+   "source": [
+    "### Код"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e34cb0b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.11 \n",
+      "Build Date: Jan 21 2024 \n",
+      "\n",
+      "command line - Cbc_C_Interface -solve -quit (default strategy 1)\n",
+      "Continuous objective value is 1168 - 0.01 seconds\n",
+      "Cgl0005I 1000 SOS with 5000 members\n",
+      "Cgl0004I processed model has 1010 rows, 5000 columns (5000 integer (5000 of which binary)) and 15000 elements\n",
+      "Cutoff increment increased from 1e-05 to 0.9999\n",
+      "Cbc0038I Initial state - 0 integers unsatisfied sum - 0\n",
+      "Cbc0038I Solution found of 1168\n",
+      "Cbc0038I Before mini branch and bound, 5000 integers at bound fixed and 0 continuous\n",
+      "Cbc0038I Mini branch and bound did not improve solution (0.16 seconds)\n",
+      "Cbc0038I After 0.16 seconds - Feasibility pump exiting with objective of 1168 - took 0.00 seconds\n",
+      "Cbc0012I Integer solution of 1168 found by feasibility pump after 0 iterations and 0 nodes (0.16 seconds)\n",
+      "Cbc0001I Search completed - best objective 1168, took 0 iterations and 0 nodes (0.16 seconds)\n",
+      "Cbc0035I Maximum depth 0, 0 variables fixed on reduced cost\n",
+      "Cuts at root node changed objective from 1168 to 1168\n",
+      "Probing was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Gomory was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Knapsack was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Clique was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "MixedIntegerRounding2 was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "FlowCover was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "TwoMirCuts was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "ZeroHalf was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "\n",
+      "Result - Optimal solution found\n",
+      "\n",
+      "Objective value:                1168.00000000\n",
+      "Enumerated nodes:               0\n",
+      "Total iterations:               0\n",
+      "Time (CPU seconds):             0.17\n",
+      "Time (Wallclock seconds):       0.18\n",
+      "\n",
+      "Total time (CPU seconds):       0.17   (Wallclock seconds):       0.18\n",
+      "\n",
+      "Результаты распределения:\n",
+      "Секция 1: 197 человек\n",
+      "Секция 2: 193 человек\n",
+      "Секция 3: 220 человек\n",
+      "Секция 4: 198 человек\n",
+      "Секция 5: 192 человек\n",
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.11 \n",
+      "Build Date: Jan 21 2024 \n",
+      "\n",
+      "command line - Cbc_C_Interface -solve -quit (default strategy 1)\n",
+      "Continuous objective value is 1168 - 0.01 seconds\n",
+      "Cgl0005I 1000 SOS with 5000 members\n",
+      "Cgl0004I processed model has 1010 rows, 5000 columns (5000 integer (5000 of which binary)) and 15000 elements\n",
+      "Cutoff increment increased from 1e-05 to 0.9999\n",
+      "Cbc0038I Initial state - 0 integers unsatisfied sum - 0\n",
+      "Cbc0038I Solution found of 1168\n",
+      "Cbc0038I Before mini branch and bound, 5000 integers at bound fixed and 0 continuous\n",
+      "Cbc0038I Mini branch and bound did not improve solution (0.18 seconds)\n",
+      "Cbc0038I After 0.18 seconds - Feasibility pump exiting with objective of 1168 - took 0.00 seconds\n",
+      "Cbc0012I Integer solution of 1168 found by feasibility pump after 0 iterations and 0 nodes (0.18 seconds)\n",
+      "Cbc0001I Search completed - best objective 1168, took 0 iterations and 0 nodes (0.18 seconds)\n",
+      "Cbc0035I Maximum depth 0, 0 variables fixed on reduced cost\n",
+      "Cuts at root node changed objective from 1168 to 1168\n",
+      "Probing was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Gomory was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Knapsack was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Clique was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "MixedIntegerRounding2 was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "FlowCover was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "TwoMirCuts was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "ZeroHalf was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "\n",
+      "Result - Optimal solution found\n",
+      "\n",
+      "Objective value:                1168.00000000\n",
+      "Enumerated nodes:               0\n",
+      "Total iterations:               0\n",
+      "Time (CPU seconds):             0.18\n",
+      "Time (Wallclock seconds):       0.19\n",
+      "\n",
+      "Total time (CPU seconds):       0.18   (Wallclock seconds):       0.19\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    ":dep good_lp = \"1.14.0\"\n",
+    ":dep rand = \"0.8\"\n",
+    ":dep rand_distr = \"0.4\"\n",
+    "\n",
+    "use good_lp::*;\n",
+    "use rand::distributions::{Distribution, WeightedIndex};\n",
+    "use rand::rngs::StdRng;\n",
+    "use rand::SeedableRng;\n",
+    "\n",
+    "let n_people = 1000;\n",
+    "let n_sections = 5;\n",
+    "\n",
+    "let min_capacity = vec![180, 180, 220, 180, 180];\n",
+    "let max_capacity = vec![250, 250, 220, 250, 250];\n",
+    "\n",
+    "fn generate_applications(n_people: usize) -> Vec<Vec<i32>> {\n",
+    "    let mut rng = StdRng::seed_from_u64(123);\n",
+    "    let weights = [3, 3, 3, 1]; \n",
+    "    \n",
+    "    let mut applications = Vec::new();\n",
+    "    \n",
+    "    for i in 0..n_people {\n",
+    "        let mut person_applications = Vec::new();\n",
+    "        \n",
+    "        for section in 0..5 {\n",
+    "            let dist = WeightedIndex::new(&weights).unwrap();\n",
+    "            let priority_value = match dist.sample(&mut rng) {\n",
+    "                0 => 1,\n",
+    "                1 => 2,\n",
+    "                2 => 3,\n",
+    "                3 => 10000,\n",
+    "                _ => 10000,\n",
+    "            };\n",
+    "            person_applications.push(priority_value);\n",
+    "        }\n",
+    "        \n",
+    "        applications.push(person_applications);\n",
+    "    }\n",
+    "    \n",
+    "    applications\n",
+    "}\n",
+    "\n",
+    "let applications = generate_applications(n_people);\n",
+    "\n",
+    "let mut vars = variables!();\n",
+    "let mut assignments: Vec<Vec<Variable>> = Vec::new();\n",
+    "\n",
+    "for i in 0..n_people {\n",
+    "    let mut person_vars = Vec::new();\n",
+    "    for j in 0..n_sections {\n",
+    "        let var = vars.add(variable().binary().name(format!(\"x_{}_{}\", i, j)));\n",
+    "        person_vars.push(var);\n",
+    "    }\n",
+    "    assignments.push(person_vars);\n",
+    "}\n",
+    "\n",
+    "fn create_objective(assignments: &[Vec<Variable>], applications: &[Vec<i32>]) -> Expression {\n",
+    "    let mut objective = Expression::from(0);\n",
+    "    \n",
+    "    for i in 0..assignments.len() {\n",
+    "        for j in 0..assignments[i].len() {\n",
+    "            let cost = if applications[i][j] == 10000 {\n",
+    "                100000.0\n",
+    "            } else {\n",
+    "                applications[i][j] as f64\n",
+    "            };\n",
+    "            objective += cost * assignments[i][j];\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    objective\n",
+    "}\n",
+    "\n",
+    "let mut problem = vars.minimise(create_objective(&assignments, &applications))\n",
+    "                      .using(good_lp::default_solver);\n",
+    "\n",
+    "for i in 0..n_people {\n",
+    "    let mut constraint_expr = Expression::from(0);\n",
+    "    for j in 0..n_sections {\n",
+    "        constraint_expr += assignments[i][j];\n",
+    "    }\n",
+    "    problem = problem.with(constraint_expr.eq(1));\n",
+    "}\n",
+    "\n",
+    "for j in 0..n_sections {\n",
+    "    let mut capacity_expr = Expression::from(0);\n",
+    "    for i in 0..n_people {\n",
+    "        capacity_expr += assignments[i][j];\n",
+    "    }\n",
+    "    problem = problem.with(constraint!(capacity_expr.clone() >= min_capacity[j]));\n",
+    "    problem = problem.with(constraint!(capacity_expr <= max_capacity[j]));\n",
+    "}\n",
+    "\n",
+    "let solution = problem.solve().expect(\"Failed to solve the problem\");\n",
+    "\n",
+    "let mut section_counts = vec![0; n_sections];\n",
+    "let mut recommendations = Vec::new();\n",
+    "\n",
+    "for i in 0..n_people {\n",
+    "    for j in 0..n_sections {\n",
+    "        if solution.value(assignments[i][j]) > 0.5 {\n",
+    "            section_counts[j] += 1;\n",
+    "            recommendations.push((i, j, applications[i][j]));\n",
+    "            break;\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "println!(\"Результаты распределения:\");\n",
+    "for (j, &count) in section_counts.iter().enumerate() {\n",
+    "    println!(\"Секция {}: {} человек\", j + 1, count);\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
