--- a/Lab 1.ipynb
+++ b/Lab 1.ipynb
@@ -79,10 +79,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "119f6550",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 8\n",
+      "y = 6\n",
+      "Максимальная выручка = 5000\n",
+      "Presolve 0 (-3) rows, 0 (-2) columns and 0 (-5) elements\n",
+      "Optimal - objective value 5000\n",
+      "After Postsolve, objective 5000, infeasibilities - dual 0 (0), primal 0 (0)\n",
+      "Optimal objective 5000 - 0 iterations time 0.002, Presolve 0.00\n"
+     ]
+    }
+   ],
    "source": [
     ":dep good_lp = \"1.14.0\"\n",
     "\n",
@@ -216,10 +230,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "817d810c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.11 \n",
+      "Build Date: Jan 21 2024 \n",
+      "\n",
+      "command line - Cbc_C_Interface -solve -quit (default strategy 1)\n",
+      "Continuous objective value is 3.12632 - 0.00 seconds\n",
+      "Cgl0005I 5 SOS with 30 members\n",
+      "Cgl0004I processed model has 11 rows, 31 columns (30 integer (30 of which binary)) and 66 elements\n",
+      "Cutoff increment increased from 1e-05 to 0.9999\n",
+      "Cbc0038I Initial state - 8 integers unsatisfied sum - 2.45053\n",
+      "Cbc0038I Pass   1: suminf.    0.00000 (0) obj. 5 iterations 11\n",
+      "Cbc0038I Solution found of 5\n",
+      "Cbc0038I Relaxing continuous gives 5\n",
+      "Cbc0038I Before mini branch and bound, 22 integers at bound fixed and 0 continuous\n",
+      "Cbc0038I Full problem 11 rows 31 columns, reduced to 8 rows 8 columns\n",
+      "Cbc0038I Mini branch and bound did not improve solution (0.00 seconds)\n",
+      "Cbc0038I Round again with cutoff of 3.91272\n",
+      "Cbc0038I Pass   2: suminf.    0.91346 (7) obj. 3.91272 iterations 8\n",
+      "Cbc0038I Pass   3: suminf.    2.76416 (8) obj. 3.91272 iterations 8\n",
+      "Cbc0038I Pass   4: suminf.    2.76416 (8) obj. 3.91272 iterations 0\n",
+      "Cbc0038I Pass   5: suminf.    1.63491 (7) obj. 3.91272 iterations 7\n",
+      "Cbc0038I Pass   6: suminf.    1.30473 (6) obj. 3.91272 iterations 5\n",
+      "Cbc0038I Pass   7: suminf.    1.20000 (5) obj. 3.91272 iterations 7\n",
+      "Cbc0038I Pass   8: suminf.    0.86982 (5) obj. 3.91272 iterations 5\n",
+      "Cbc0038I Pass   9: suminf.    1.29909 (6) obj. 3.91272 iterations 6\n",
+      "Cbc0038I Pass  10: suminf.    1.26865 (8) obj. 3.91272 iterations 6\n",
+      "Cbc0038I Pass  11: suminf.    1.49155 (9) obj. 3.91272 iterations 10\n",
+      "Cbc0038I Pass  12: suminf.    1.40427 (9) obj. 3.91272 iterations 4\n",
+      "Cbc0038I Pass  13: suminf.    3.00000 (9) obj. 3.91272 iterations 10\n",
+      "Cbc0038I Pass  14: suminf.    3.00000 (9) obj. 3.91272 iterations 0\n",
+      "Cbc0038I Pass  15: suminf.    0.86982 (5) obj. 3.91272 iterations 6\n",
+      "Cbc0038I Pass  16: suminf.    0.86982 (5) obj. 3.91272 iterations 3\n",
+      "Cbc0038I Pass  17: suminf.    1.29909 (6) obj. 3.91272 iterations 6\n",
+      "Cbc0038I Pass  18: suminf.    2.26653 (10) obj. 3.91272 iterations 11\n",
+      "Cbc0038I Pass  19: suminf.    0.52219 (7) obj. 3.91272 iterations 6\n",
+      "Cbc0038I Pass  20: suminf.    2.43491 (8) obj. 3.91272 iterations 11\n",
+      "Cbc0038I Pass  21: suminf.    2.36644 (7) obj. 3.91272 iterations 1\n",
+      "Cbc0038I Pass  22: suminf.    1.63491 (6) obj. 3.91272 iterations 2\n",
+      "Cbc0038I Pass  23: suminf.    1.30473 (6) obj. 3.91272 iterations 2\n",
+      "Cbc0038I Pass  24: suminf.    1.20000 (5) obj. 3.91272 iterations 6\n",
+      "Cbc0038I Pass  25: suminf.    0.86982 (5) obj. 3.91272 iterations 3\n",
+      "Cbc0038I Pass  26: suminf.    1.29909 (6) obj. 3.91272 iterations 5\n",
+      "Cbc0038I Pass  27: suminf.    1.47830 (7) obj. 3.91272 iterations 6\n",
+      "Cbc0038I Pass  28: suminf.    2.36142 (9) obj. 3.91272 iterations 8\n",
+      "Cbc0038I Pass  29: suminf.    1.86982 (9) obj. 3.91272 iterations 7\n",
+      "Cbc0038I Pass  30: suminf.    2.26134 (9) obj. 3.91272 iterations 6\n",
+      "Cbc0038I Pass  31: suminf.    1.47830 (7) obj. 3.91272 iterations 5\n",
+      "Cbc0038I No solution found this major pass\n",
+      "Cbc0038I Before mini branch and bound, 4 integers at bound fixed and 0 continuous\n",
+      "Cbc0038I Full problem 11 rows 31 columns, reduced to 11 rows 27 columns\n",
+      "Cbc0038I Mini branch and bound did not improve solution (0.01 seconds)\n",
+      "Cbc0038I After 0.01 seconds - Feasibility pump exiting with objective of 5 - took 0.00 seconds\n",
+      "Cbc0012I Integer solution of 5 found by feasibility pump after 0 iterations and 0 nodes (0.01 seconds)\n",
+      "Cbc0038I Full problem 11 rows 31 columns, reduced to 8 rows 8 columns\n",
+      "Cbc0006I The LP relaxation is infeasible or too expensive\n",
+      "Cbc0013I At root node, 0 cuts changed objective from 3.1263158 to 9 in 1 passes\n",
+      "Cbc0014I Cut generator 0 (Probing) - 0 row cuts average 0.0 elements, 6 column cuts (6 active)  in 0.000 seconds - new frequency is 1\n",
+      "Cbc0014I Cut generator 1 (Gomory) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
+      "Cbc0014I Cut generator 2 (Knapsack) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
+      "Cbc0014I Cut generator 3 (Clique) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
+      "CbОптимальное решение найдено!\n",
+      "Минимальное время выполнения: T = 4.999999999999999 часов\n",
+      "\n",
+      "Распределение работ по рабочим:\n",
+      "Рабочий W_1 выполняет работы: [2]\n",
+      "  Общее время: 4 часов\n",
+      "  Состав работ:\n",
+      "    - Работа J_2 (4 часов)\n",
+      "\n",
+      "Рабочий W_2 выполняет работы: [5]\n",
+      "  Общее время: 3 часов\n",
+      "  Состав работ:\n",
+      "    - Работа J_5 (3 часов)\n",
+      "\n",
+      "Рабочий W_3 выполняет работы: [4]\n",
+      "  Общее время: 2 часов\n",
+      "  Состав работ:\n",
+      "    - Работа J_4 (2 часов)\n",
+      "\n",
+      "Рабочий W_4 выполняет работы: [1]\n",
+      "  Общее время: 5 часов\n",
+      "  Состав работ:\n",
+      "    - Работа J_1 (5 часов)\n",
+      "\n",
+      "Рабочий W_5 выполняет работы: [3]\n",
+      "  Общее время: 5 часов\n",
+      "  Состав работ:\n",
+      "    - Работа J_3 (5 часов)\n",
+      "\n",
+      "c0014I Cut generator 4 (MixedIntegerRounding2) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
+      "Cbc0014I Cut generator 5 (FlowCover) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
+      "Cbc0014I Cut generator 7 (ZeroHalf) - 0 row cuts average 0.0 elements, 0 column cuts (0 active)  in 0.000 seconds - new frequency is -100\n",
+      "Cbc0001I Search completed - best objective 5, took 4 iterations and 0 nodes (0.01 seconds)\n",
+      "Cbc0035I Maximum depth 0, 0 variables fixed on reduced cost\n",
+      "Cuts at root node changed objective from 3.12632 to 9\n",
+      "Probing was tried 1 times and created 6 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Gomory was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Knapsack was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Clique was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "MixedIntegerRounding2 was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "FlowCover was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "TwoMirCuts was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "ZeroHalf was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "\n",
+      "Result - Optimal solution found\n",
+      "\n",
+      "Objective value:                5.00000000\n",
+      "Enumerated nodes:               0\n",
+      "Total iterations:               4\n",
+      "Time (CPU seconds):             0.01\n",
+      "Time (Wallclock seconds):       0.01\n",
+      "\n",
+      "Total time (CPU seconds):       0.01   (Wallclock seconds):       0.01\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ":dep good_lp = \"1.14.0\"\n",
     "\n",
@@ -300,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fcb0979",
+   "id": "f71551b5",
    "metadata": {},
    "source": [
     "## Задание 3"
@@ -308,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3c83e9d",
+   "id": "99764d83",
    "metadata": {},
    "source": [
     "### Постановка задачи"
@@ -316,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd711394",
+   "id": "c4905674",
    "metadata": {},
    "source": [
     "Представьте, что мы хотим провести DataFest с 5 разными секциями и у для каждой из них мы забронировали 5 залов различной вместимости: в каждом зале не должно быть меньше 180 и больше 250 людей, а на третьей секции активность подразумевает, что должно быть точно 220 человек.\n",
@@ -328,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47383c37",
+   "id": "590a6e55",
    "metadata": {},
    "source": [
     "### Математическая модель"
@@ -336,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eb97b62",
+   "id": "03dcb3fb",
    "metadata": {},
    "source": [
     "- $ I = {1, 2, \\dots, 1000} $ - множество людей;\n",
@@ -366,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9eb6eae9",
+   "id": "4d3c489f",
    "metadata": {},
    "source": [
     "### Код"
@@ -375,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e34cb0b5",
+   "id": "e9c5556e",
    "metadata": {},
    "outputs": [
     {
